# metabox

./: .gitignore  README.md
scripts/: build.sh  clean.sh  debug.sh  test.sh
src/: CMakeLists.txt
src/metabox/: CMakeLists.txt  components.cpp  entity_factories.hpp  main.cpp  settings.h
src/metabox/components/: BackgroundTexture.cpp  BackgroundTexture.h  BoxNode.cpp  BoxNode.h  GameEntity.cpp  GameEntity.h  GameEntityContainer.cpp  GameEntityContainer.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsWorld.hpp  Texture.cpp  Texture.h  ViewFollow.cpp  ViewFollow.h
src/metabox/systems/: BoxPhysics.hpp  BoxTraversal.hpp  FixedStep.hpp  GameEntityBoxTraversal.hpp  GameWindow.hpp  Physics.hpp  Window.hpp
